install/roles/automation-hub/templates/streams-dex/050-Deployment-console-dex.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streams-dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streams-dex
  template:
    metadata:
      labels:
        app: streams-dex
    spec:
      serviceAccountName: streams-dex
      volumes:
        - name: config
          secret:
            secretName: streams-dex
            items:
              - key: config.yaml
                path: config.yaml
        - name: openshift-ca
          configMap:
            name: kube-root-ca.crt
            items:
              - key: ca.crt
                path: openshift.pem
      containers:
        - image: ghcr.io/dexidp/dex:v2.32.0
          name: dex
          command: [ "/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml" ]

          ports:
            - name: http
              containerPort: 5556

          volumeMounts:
            - name: config
              mountPath: /etc/dex/cfg
            - name: openshift-ca
              mountPath: /etc/ssl/openshift.pem
              subPath: openshift.pem

          readinessProbe:
            httpGet:
              path: /healthz
              port: 5556
              scheme: HTTP
