install/roles/automation-hub/templates/streams-dex/060-Service-console-dex.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: streams-dex
spec:
  type: ClusterIP
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: http
  selector:
    app: streams-dex
